Changes in version NEXT (2018-06-18)
------------------------------------

WARNING:

    * There are some major user-visible changes in this version, and I
      haven't updated the documentation to match yet! This is on my todo
      list, but it may not be completed until the next official release in
      October. 

User Visible Changes:

    * Column names reported in tabulateFlowHist are completely revised. The
      new names should be self-explanatory, but will not match the column
      names reported in previous versions of flowPloidy. The output now
      includes the counts for the G1 and G2 peaks, as well as for each
      S-phase component.

    * The browseFlowHist interface now includes the option to add
      annotations. These are text comments, not part of the analysis. This
      allows the user to add notes such as "this sample needs to be rerun",
      or "exclude this, data is poor quality", etc.

    * Analysis of endopolyploidy is supported by allowing the user to a)
      increase the number of peaks (samples) fit, up to a maximum of 6; b)
      to *not* fit G2 peaks (via the G2 = FALSE argument), so that the 2C,
      4C, 6C etc peaks are all fit independently of each other, without
      requiring that the 4C peak be twice the size of the 2C peak; and c)
      reworking the output of tabulateFlowHist to allow for reporting the
      fit parameters for an arbitrary number of peaks.

Internal Changes:

    * The G1, G2 and S-phase model components are now generated by helper
      functions. These allows me to tweak the component definitions in a
      single location, after which the change is automatically incorporated
      in all of the associated components.

    * The above changes allowed me to replace a lot of duplicated code with
      more general forms, notably in the plotting and tabulating functions.

    * Model parameters are now collected dynamically, so I don't need to